--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
+    "axios": "^0.24.0",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "5.3.1",
+    "styled-components": "^5.3.3",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
