--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
     "uniqid": "^5.4.0"
   },
